--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,15 @@
-+<!DOCTYPE html>
-+<html>
-+
-+  <head>
-+    <meta charset='utf-8'>
-+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-+    <meta name="description" content="Jlproperty.GitHub.io : ">
-+
-+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-+
-+    <title>Jlproperty.GitHub.io</title>
-+  </head
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Jlproperty.GitHub.io : ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Jlproperty.GitHub.io</title>
+  </head>
 
 <body>
 <header>J.L Property<br/> Services
