--- a/index.html
+++ b/index.html
@@ -11,4 +11,34 @@
     <title>Jlproperty.GitHub.io</title>
   </head>
 
+<body>
+<header>J.L Property<br/> Services
+</header>
+<hr/>
+<ul class="nav">
+<li class="as"><a href="home.html">home</a></li>
+<li class="as"><a href="gallery.html">gallery</a></li>
+<li class="as"><a href="testimonials.html">testimonials</a></li>
+<li class="as"><a href="contact.html">contact us</a></li>
+</ul>
+<hr/>
+<h1>Experienced roofing and building company...</h1>
+<h2>About us</h2>
+<p>Based in Leighton buzzard we cover a wide variety of skills which enables us to complete most projects asked of us.
+
+All carried out to our highest standards, providing you with a quality finish.
+</p>
+<h2>What we do</h2>
+<p>A list of projects including</p>
+<ul class="do">
+<li><b>Roofing</b> from roofing repairs to re-roofing, flat roofs and lead flashing.</li>
+<li><b>Facias & Soffits</b></li>
+<li><b>UPVC Windows & Doors</b></li>
+<li><b>Fencing & Landscape gardening</b></li>
+<li><b>General building</b> from patching a hole in your plaster, new build projects or even to revamp a tired room it brand new again.</li>
+</ul>making
+</body>
+
+
+
 </html>
