--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
+
 <!DOCTYPE html>
+
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Jlproperty.GitHub.io : ">
+ 
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <head>
 
-    <title>Jlproperty.GitHub.io</title>
-  </head>
+    <meta charset='utf-8'>
+
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <meta name="description" content="Jlproperty.GitHub.io , services: building and roofing,
+location: Leighton buzzard, Bedfordshire ">
+
+
+ 
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+ 
+
+    <title>Jlproperty.GitHub.io</title>
+
+  <meta name="robots" content="index,follow">
+
+  </head>
 
 <body>
 <header>J.L Property<br/> Services
