--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 
 <html>
@@ -18,8 +19,8 @@ location: Leighton buzzard, Bedfordshire ">
  
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
- 
+  
+ <meta name="google-site-verification" content="W9tmsz98ZHiY53OrTJP3uHLKwIf-xvY74SlIVscoC7A" />
 
     <title>Jlproperty.GitHub.io</title>
 
