--- a/gallery.html
+++ b/gallery.html
@@ -10,15 +10,20 @@
 
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <meta name="description" content="Jlproperty.GitHub.io : ">
+    <meta name="description" content="Jlproperty.GitHub.io , services: building and roofing,
+location: Leighton buzzard, Bedfordshire ">
+
 
  
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
- 
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+     <link rel="stylesheet" href="style1.css">
+  
+ <meta name="google-site-verification" content="W9tmsz98ZHiY53OrTJP3uHLKwIf-xvY74SlIVscoC7A" />
 
     <title>Jlproperty.GitHub.io</title>
+
+  <meta name="robots" content="index,follow">
 
   </head>
 
@@ -36,5 +41,27 @@
 <li class="as"><a href="contact.html">contact us</a></li>
 </ul>
 <hr/>
+<h1> Click below to view our online galleries.</h1>
+<div class="pix">
+<a href="build.html"><IMG src="build1.jpg" width="400px" height="500px"/></a>
+<div class="desc"> building gallery</div>
+</div>
+<div class="pix">
+<a href="roof.html"><IMG src="roof1.jpg" width="400px" height="500px"/></a>
+<div class="desc">roofing gallery</div>
+</div>
+
+
+
+
+
+
+
+
+
+<div class="pix2">
+<a href="fence.html"><IMG src="fence.jpg" width="400px" height="500px"/></a>
+<div class="desc">landscape gardening<br>and fencing gallery</div>
+</div>
 </body>
-</html>
+</html>. 
