Update and rename testimonials to testimonials.html

--- a/testimonials.html
+++ b/testimonials.html
@@ -16,7 +16,7 @@ location: Leighton buzzard, Bedfordshire ">
 
  
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
   
  <meta name="google-site-verification" content="W9tmsz98ZHiY53OrTJP3uHLKwIf-xvY74SlIVscoC7A" />
 
