--- a/testimonials.html
+++ b/testimonials.html
@@ -45,6 +45,6 @@ location: Leighton buzzard, Bedfordshire ">
 textarea.html-text-box {background-color:#ffffff;background-image:url(http://);background-repeat:no-repeat;background-attachment:fixed;border-width:1;border-style:solid;border-color:#cccccc;font-family:Arial;font-size:18pt;color:#000000;}
 input.html-text-box {background-color:#ffffff;font-family:Arial;font-size:18pt;color:#000000;}
 </style>
-<form method="post" action="http://"><textarea name="comments" cols="30" rows="5" class="html-text-box">Comments here...</textarea><br><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></form>
+<form method="post" action="http://www.jlpropertyservices.tk/testimonials.html"><textarea name="comments" cols="30" rows="5" class="html-text-box">Comments here...</textarea><br><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></form>
 </body>
 </html>. 
