--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@ location: Leighton buzzard, Bedfordshire ">
 </header>
 <hr/>
 <ul class="nav">
-<li class="as"><a href="home.html">home</a></li>
+<li class="as"><a href="index.html">home</a></li>
 <li class="as"><a href="gallery.html">gallery</a></li>
 <li class="as"><a href="testimonials.html">testimonials</a></li>
 <li class="as"><a href="contact.html">contact us</a></li>
