--- a/testimonials.html
+++ b/testimonials.html
@@ -40,11 +40,7 @@ location: Leighton buzzard, Bedfordshire ">
 <li class="as"><a href="contact.html">contact us</a></li>
 </ul>
 <hr/>
-<!-- HTML Codes by Quackit.com -->
-<style type="text/css">
-textarea.html-text-box {background-color:#ffffff;background-image:url(http://);background-repeat:no-repeat;background-attachment:fixed;border-width:1;border-style:solid;border-color:#cccccc;font-family:Arial;font-size:18pt;color:#000000;}
-input.html-text-box {background-color:#ffffff;font-family:Arial;font-size:18pt;color:#000000;}
-</style>
-<form method="post" action="http://www.jlpropertyservices.tk/testimonials.html"><textarea name="comments" cols="30" rows="5" class="html-text-box">Comments here...</textarea><br><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></form>
+<h1>Comments from previous customers</h1>
+<p class="com">please email us your comments regarding our work to, jlpropertyservices1@gmail.com,<br>so we can add them to this page for others to review.<br>Many Thanks.</p>
 </body>
 </html>. 
