--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@ All carried out to our highest standards, providing you with a quality finish.
 <li><b>General building</b> from patching a hole in your plaster, new build projects or even to revamp a tired room it brand new again.</li>
 </ul>making
 </body>
-
+<footer>
+<a><link href="sitemap.xml">sitemap</a>
+</footer>
 
 
 </html>
