--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ All carried out to our highest standards, providing you with a quality finish.
 </ul>making
 </body>
 <footer>
-<a><link href="sitemap.xml">sitemap</a>
+<a><link href="sitemap.xml"/>sitemap</a>
 </footer>
 
 
