--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ location: Leighton buzzard, Bedfordshire ">
   
  <meta name="google-site-verification" content="W9tmsz98ZHiY53OrTJP3uHLKwIf-xvY74SlIVscoC7A" />
 
-    <title>Jlproperty.GitHub.io</title>
+    <title>building and roofing contractors,based in Leighton buzzard Bedfordshire</title>
 
   <meta name="robots" content="index,follow">
 
