--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <meta name="description" content="Jlproperty.GitHub.io , services: building and roofing,
-location: Leighton buzzard, Bedfordshire ">
+    <meta name="description" content="Jlproperty Services, contractors in building eg; plastering, carpentry, renovation, new build,kitchen and bathrooms. Roofing; re roof and roof repairs. UPVC Facias and soffits. Fencing and landscape gardening. Based in Leighton buzzard, covering Hertfordshire, Bedfordshire and Buckinghamshire.">
 
 
  
@@ -24,7 +23,6 @@ location: Leighton buzzard, Bedfordshire ">
 
     <title>building and roofing contractors,based in Leighton buzzard Bedfordshire</title>
 
-  <meta name="robots" content="index,follow">
 
   </head>
 
