--- a/index.html
+++ b/index.html
@@ -25,36 +25,49 @@
 
 
   </head>
-
 <body>
-<header>J.L Property<br/> Services
+<div itemscope itemtype="http://schema.org/thing">
+<header itemprop="name">J.L Property<br/> Services
 </header>
+</div>
 <hr/>
 <ul class="nav">
-<li class="as"><a href="index.html">home</a></li>
+<li class="as"><a href="home.html">home</a></li>
 <li class="as"><a href="gallery.html">gallery</a></li>
 <li class="as"><a href="testimonials.html">testimonials</a></li>
 <li class="as"><a href="contact.html">contact us</a></li>
 </ul>
 <hr/>
-<h1>Experienced roofing and building company...</h1>
+<div itemscope itemtype="http://schema.org/Services">
+<h1 itemprop="serviceType">Experienced roofing and building company...</h1>
+</div>
 <h2>About us</h2>
-<p>Based in Leighton buzzard we cover a wide variety of skills which enables us to complete most projects asked of us.
+<div itemscope itemtype="http://schema.org/Organization">
+<p>Based in <span itemprop="address">Leighton buzzard</span>we cover a wide variety of skills which enables us to complete most projects asked of us.
 
 All carried out to our highest standards, providing you with a quality finish.
 </p>
+</div> 
 <h2>What we do</h2>
 <p>A list of projects including</p>
+<div>
 <ul class="do">
-<li><b>Roofing</b> from roofing repairs to re-roofing, flat roofs and lead flashing.</li>
-<li><b>Facias & Soffits</b></li>
-<li><b>UPVC Windows & Doors</b></li>
-<li><b>Fencing & Landscape gardening</b></li>
-<li><b>General building</b> from patching a hole in your plaster, new build projects or even to revamp a tired room it brand new again.</li>
-</ul>making
-<footer>
-<a href="sitemap.xml">sitemap</a>
-</footer>
+<li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services"><span itemprop="name"><b>Roofing</b> from roofing repairs to re-roofing, flat roofs and lead flashing".</span></div></li>
+<li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services">
+<span itemprop="name"><b>Facias & Soffits</b></span></div></li>
+<li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services">
+<span itemprop="name"><b>UPVC Windows & Doors</b></span></div></li>
+<li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services">
+<span itemprop="name"><b>Fencing & Landscape gardening</b></span></div></li>
+<li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services">
+<span itemprop="name"><b>General building</b> from patching a hole in your plaster, new build projects or even to revamp a tired room making it brand new again.</span></div></li>
+</ul>
 </body>
-
-</html>
+<footer>
+<a><link href="sitemap.xml"/>sitemap</a>
+</footer
