--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li class="as"><a href="contact.html">contact us</a></li>
 </ul>
 <hr/>
-<div itemscope itemtype="http://schema.org/services">
+<div itemscope itemtype="http://schema.org/Service">
 <h1 itemprop="serviceType">Experienced roofing and building company...</h1>
 </div>
 <h2>About us</h2>
