--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@ All carried out to our highest standards, providing you with a quality finish.
 <div>
 <ul class="do">
 <li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
-<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services"><span itemprop="name"><b>Roofing</b> from roofing repairs to re-roofing, flat roofs and lead flashing".</span></div></li>
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Service"><span itemprop="name"><b>Roofing</b> from roofing repairs to re-roofing, flat roofs and lead flashing".</span></div></li>
 <li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
-<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Service">
 <span itemprop="name"><b>Facias & Soffits</b></span></div></li>
 <li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
-<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Service">
 <span itemprop="name"><b>UPVC Windows & Doors</b></span></div></li>
 <li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
-<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Service">
 <span itemprop="name"><b>Fencing & Landscape gardening</b></span></div></li>
 <li itemprop="itemListElement" itemscope itemtype="http://schema.org/Offer">
-<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Services">
+<div itemprop="itemOffered" itemscope itemtype="http://schema.org/Service">
 <span itemprop="name"><b>General building</b> from patching a hole in your plaster, new build projects or even to revamp a tired room making it brand new again.</span></div></li>
 </ul>
 </body>
