--- a/build.html
+++ b/build.html
@@ -48,4 +48,7 @@ location: Leighton buzzard, Bedfordshire ">
 <div class="gallery">
 <IMG src="gallery/build3.jpg">
 </div>
+<div class="gallery">
+<IMG src="gallery/build4.jpg">
+</div>
 </html>. 
